ajouter la fonction <script src=https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.25.1/moment.min.js></script>date

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                     <div class="head-popup">Confirm</div>
                     <p id="message-alerte">tu es vraiment sur de vouloir effacer</p>
                     <div class="btns">
-                        <label for="check">Yes, Delete!</label>
-                        <label for="check">Cancel</label>
+                        <label id="oui">Yes, Delete!</label>
+                        <label id="non">Cancel</label>
                     </div>
                 </div>
             </div>
